--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@ body {
     padding: 0;
     margin: auto;
     background: chocolate;
+    font-family: Consolas, sans-serif;
 }
 
 .container-full {
